# ml-benchmark

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: default.yaml  docs.yaml
.husky/: pre-push
benchmarks/python/cnn-benchmark/: Dockerfile  README.md  project.json  pyproject.toml
benchmarks/python/cnn-benchmark/cnn_benchmark/: main.py
datasets/cifar10-dataset/: Dockerfile  README.md  project.json  pyproject.toml
datasets/cifar10-dataset/downloader/: download.py  main.py
datasets/cifar10-dataset/hack/: entrypoint.sh
datasets/cifar10-dataset/tests/: test_downloader.py  test_hello.py
