[tool.poetry]
name = "ml-benchmark"
version = "0.1.0"
description = ""
authors = ["Fabio Caffarello <fabio.caffarello@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.23"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = "^0.25.1"
mkdocs-autorefs = "^1.0.1"
mkdocstrings-python = "^1.10.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-include-markdown-plugin = "^6.0.6"
mkdocs-swagger-ui-tag = "^0.6.10"
plantuml-markdown = "^3.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
