[tool.poetry]
name = "ml-benchmark"
version = "0.1.0"
description = ""
authors = [ "Fabio Caffarello <fabio.caffarello@gmail.com>" ]
readme = "README.md"
package-mode = false

  [tool.poetry.dependencies]
  python = "^3.12"

    [tool.poetry.dependencies.cifar10-dataset]
    path = "./datasets/cifar10-dataset"
    develop = true

    [tool.poetry.dependencies.cnn-benchmark]
    path = "./benchmarks/python/cnn-benchmark"
    develop = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.23"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = "^0.25.1"
mkdocs-autorefs = "^1.0.1"
mkdocstrings-python = "^1.10.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-include-markdown-plugin = "^6.0.6"
mkdocs-swagger-ui-tag = "^0.6.10"
plantuml-markdown = "^3.9.7"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
autopep8 = "2.0.2"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
